--- a/pom.xml
+++ b/pom.xml
@@ -85,6 +85,7 @@
     <qulice.version>0.18.2</qulice.version>
     <sonar.version>3.4.0.905</sonar.version>
     <commons-logging.version>1.2</commons-logging.version>
+    <commons-collections.version>3.2.2</commons-collections.version>
     <!-- General dependencies -->
     <cactoos.version>0.37</cactoos.version>
     <velocity.version>1.7</velocity.version>
@@ -120,6 +121,18 @@
       <groupId>org.apache.velocity</groupId>
       <artifactId>velocity</artifactId>
       <version>${velocity.version}</version>
+      <scope>provided</scope>
+      <exclusions>
+        <exclusion>
+          <groupId>commons-collections</groupId>
+          <artifactId>commons-collections</artifactId>
+        </exclusion>
+      </exclusions>
+    </dependency>
+    <dependency>
+      <groupId>commons-collections</groupId>
+      <artifactId>commons-collections</artifactId>
+      <version>${commons-collections.version}</version>
       <scope>provided</scope>
     </dependency>
     <dependency>
@@ -237,6 +250,12 @@
               <lineLength>100</lineLength>
               <excludes combine.children="append">
                 <exclude>findbugs:.*</exclude>
+                <!--
+                  The transitive dependency commons-collection has vulnerability
+                  https://github.com/dgroup/laconic-velocity/issues/35, thus
+                  it was upgraded manually.
+                -->
+                <exclude>duplicatefinder:commons-collections</exclude>
               </excludes>
             </configuration>
             <executions>
